# PyTECGg

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  todo-release.md  todo.md
.github/workflows/: build_docs.yml  build_publish.yml  pytest.yml  test_win_arm64.yml  wheels.yml
contributing/: index.html
docs/: index.md  installation.md
docs/includes/: abbreviations.md
docs/quickstart/: 0-data-ingestion-setup.md  1-preprocessing-geometry.md  2-tec-calibration.md  3-batch-processing.md  arcs.md  download-rinex.md  ipp.md  lin-comb-tec-arcs.md  linear-combinations.md  parsing.md  tec-calibration.md
docs/reference/: context.md  parsing.md  satellites.md  tec_calibration.md  utils.md
includes/abbreviations/: index.html
installation/: index.html
pytecgg/: __init__.py  context.py
pytecgg/linear_combinations/: __init__.py  arcs.py  constants.py  cs_lol_detection.py  lc_calculation.py  mw.py  observables.py
pytecgg/parsing/: Cargo.toml  __init__.py
pytecgg/phase/: __init__.py  gflc.py  ipp.py
pytecgg/satellites/: __init__.py  constants.py  ephemeris.py  glonass.py  ipp.py  positions.py
pytecgg/satellites/kepler/: coordinates.py  orbits.py
pytecgg/satellites/state_vector/: coordinates.py  orbits.py
pytecgg/tec_calibration/: __init__.py  arcs.py  calibration.py  calibration_preprocessing.py  constants.py  modip.py  polynomial_expansion.py
pytecgg/tec_calibration/modip_grids/: modip_2015.npz  modip_2016.npz  modip_2017.npz  modip_2018.npz  modip_2019.npz  modip_2020.npz  modip_2021.npz  modip_2022.npz  modip_2023.npz  (+6 more)
pytecgg/utils/: __init__.py  benchmark.py  download_rinex.py  summarise_rinex.py
quickstart/0-data-ingestion-setup/: index.html
quickstart/1-preprocessing-geometry/: index.html
quickstart/2-tec-calibration/: index.html
quickstart/3-batch-processing/: index.html
reference/context/: index.html
reference/parsing/: index.html
reference/satellites/: index.html
reference/tec_calibration/: index.html
reference/utils/: index.html
search/: search_index.json
src/: lib.rs
tests/: conftest.py  test_context.py  test_download_rinex.py  test_ephemeris.py  test_ipp.py  test_kepler.py  test_linear_combinations.py  test_obs.py  test_positions.py
(+1 files in other folders)
