[tool.poetry]
name = "pytecgg"
version = "1.0.0"
description = "Total Electron Content (TEC) reconstruction with GNSS data – a Python package with a Rust core"
authors = ["Vincenzo Ventriglia <vincenzo.ventriglia@outlook.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
polars = "^1.20.0"
numpy = "^2.0.0"
scipy = "^1.15"
pymap3d = "^3.2"
tzdata = "^2025.2"
ppigrf = "^2.1.0"
numba = "^0.63.1"

[tool.poetry.group.dev.dependencies]
maturin = "^1.8.7"
pytest = "^8.4.1"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
plotly = "^6.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
matplotlib = "^3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=pytecgg --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/constants.py",
    "pytecgg/utils/benchmark.py"
]

[tool.maturin]
module-name = "pytecgg"

[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "pytecgg"
version = "1.0.0"
description = "Total Electron Content (TEC) reconstruction with GNSS data – a Python package with a Rust core"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Vincenzo Ventriglia", email = "vincenzo.ventriglia@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "polars >=1.20.0",
    "numpy >=2.0.0",
    "scipy >=1.15",
    "pymap3d >=3.2",
    "tzdata >=2025.2",
    "ppigrf >=2.1.0",
    "numba >=0.63.1"
]